--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,9 +16,18 @@ services:
       - postgres
     restart: unless-stopped
 
+  redis:
+    container_name: redis-cache
+    image: redis:7.0-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis:/data
+
 networks:
   postgres:
     driver: bridge
 
 volumes:
     postgres:
+    redis:
