--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "npx typeorm-ts-node-esm -d src/db/data-source-cli.ts"
+    "typeorm": "npx typeorm-ts-node-esm -d src/db/data-source-cli.ts",
+    "migrations": "npx typeorm-ts-node-esm -d src/db/data-source-cli.ts migration:run"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^2.2.1",
